# diagnosis-experiments

./: .gitignore  README.md  RUNBOOK.md  configs.manifest  configs.manifest.efficiency  pyproject.toml
.github/workflows/: aggregate.yml  batch.yml  smoke.yml
configs/cc_batch/: PROVENANCE.csv  exp10_AT53.json  exp11_AT54.json  exp12_AT54.json  exp13_AT6A.json  exp14_AT6A.json  exp15_AT6B.json  exp16_AT6B.json  exp17_AT6C.json  exp18_AT6C.json  exp19_AT6ABC.json  exp1_AT1.json  exp20_AT6ABC.json  exp21_CC1.json  exp22_CC1.json  exp23_CC2.json  exp24_CC2.json  exp25_CC3.json  exp26_CC3.json  exp27_CC4.json  exp28_CC4.json  exp29_CC5.json  exp2_AT1.json  exp30_CC5.json  exp31_CCX.json  exp32_CCX.json  exp33_RR.json  exp3_AT2.json  exp4_AT2.json  exp5_AT51.json  exp6_AT51.json  exp7_AT52.json  exp8_AT52.json  exp9_AT53.json
diagnosis/: __init__.py  cache.py  cli.py  config.py  defs.py  fitness.py  ga.py  harness.py  individual.py  inference.py  pipeline.py  quantization.py  worker.py
diagnosis/diagnostics/: arff.py  j48.py  summary.py
diagnosis/lang/: internal_encoder.py  polarity.py  quantize.py
diagnosis/mutation/: api.py
feature_profile/: apply_feature_profile.py  experiment_feature_profile.json
hpc/: RUNBOOK_alliance.md  diagnosis.def  fetch_wheels.sh  requirements-lock.txt  submit_batch.sh
hpc/wheels/: .gitkeep
replication/evaluation_inputs/effectiveness/AT1/: AT1_AT001.py
replication/evaluation_inputs/effectiveness/AT2/: AT2_AT015.py
scripts/: aggregate_trees.py  find_unfinished.py  gen_batch_configs.py  plot_cvpr.py  preflight.sh  run_batch.py
(+20 files in other folders)
